# PhaseFlow

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
analysis/: common.py  faucet.py  gas_kick.py  shock_tube.py  slugging.py  smoke_web.py  valve_slam.py
bindings/python/: Cargo.toml  phase_flow.pyi  pyproject.toml
bindings/python/src/: lib.rs
crates/core/: Cargo.toml
crates/core/examples/: slug_waterfall.rs
crates/core/src/: closures.rs  eos.rs  lib.rs  regime.rs  scenario.rs  sim.rs
crates/core/tests/: acceptance.rs
crates/scenario/: Cargo.toml
crates/scenario/src/: lib.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
web/: index.html
web/src/: app.js  charts.js  history.js  presets.js  render.js  tdmap.js  theme.js
