[project]
name = "phaseflow-dev"
version = "0.1.0"
description = "Dev environment for phase-flow: analysis, verification plots, web smoke"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "matplotlib>=3.8",
    "pytest>=8",
    "playwright>=1.45",
    "phase-flow",
]

[tool.uv]
package = false

[tool.uv.sources]
phase-flow = { path = "bindings/python" }

[tool.pytest.ini_options]
testpaths = ["analysis"]
python_files = ["faucet.py", "shock_tube.py", "slugging.py", "valve_slam.py", "gas_kick.py", "smoke_web.py"]

[dependency-groups]
# ruff minor versions change formatting; pin the line so CI and
# pre-commit (which runs this same ruff) never disagree
dev = ["ruff>=0.15,<0.16", "pre-commit>=4"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# matplotlib.use("Agg") must precede the pyplot import in the analysis scripts
"analysis/*" = ["E402"]
