[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "phase-flow"
version = "0.1.0"
description = "Transient 1D drift-flux multiphase pipe flow simulator (Rust core)"
requires-python = ">=3.10"

[tool.maturin]
include = [{ path = "phase_flow.pyi", format = "sdist" }, { path = "phase_flow.pyi", format = "wheel" }]
