[package]
name = "phase-flow-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
phase-core = { path = "../core" }
phase-scenario = { path = "../scenario" }
wasm-bindgen = "0.2"
js-sys = "0.3"
